--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "airtable": "^0.11.4",
     "bootstrap": "^5.1.3",
     "next": "12.2.2",
     "react": "18.2.0",
